# dsn-bitirme

./: .env.example  .gitignore  DSN_Project_Spec.md  ENV_VARIABLES.md  GCP_KURULUM_REHBERI.md  PROJECT_OVERVIEW.md  README.md  USER_X_E2E_TEST.md  VPS_KURULUM_REHBERI.md  docker-compose.yml
WINDOWS/: AGENT_USER_GUIDE.txt  KURULUM.txt
WINDOWS/agent-package/: KURULUM.txt
agent/: build.sh  go.mod  go.sum
agent/linux/: install-dsn-agent.sh
agent/linux-package/: USER_GUIDE_LINUX_AGENT.md  config.yaml.example  install-dsn-agent.sh
agent/mac-package/: USER_GUIDE_MAC_AGENT.md  install-dsn-agent-mac.sh
backend/: .env.example  Dockerfile  alembic.ini  get_testuser_token.py  get_token_testkullanici.py  requirements.txt  test_limits.py  test_scenarios_upload_50mb_testuser.py
backend/alembic/: env.py
backend/app/: config.py  dependencies.py  main.py
backend/tests/: test_auth.py  test_health.py
frontend/: .dockerignore  Dockerfile  next.config.mjs  package-lock.json  package.json  vitest.config.ts
frontend/app/: globals.css  layout.tsx
frontend/components/: language-toggle.tsx  navbar.tsx  theme-toggle.tsx
frontend/contexts/: auth-context.tsx  language-context.tsx
frontend/lib/: api.test.ts  api.ts  errors.test.ts  errors.ts  role.test.ts  role.ts  utils.test.ts  utils.ts  webCrypto.ts
installer/: .env.example  index.html  package-lock.json  package.json
installer/src/: App.tsx  styles.css  (+1 more)
installer/src-tauri/: Cargo.toml  tauri.conf.json
installer/src-tauri/capabilities/: default.json
installer/src-tauri/src/: commands.rs  lib.rs  main.rs
(+68 files in other folders)
