[package]
name    = "dsn-installer"
version = "1.0.0"
edition = "2021"

[lib]
name       = "dsn_installer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri                        = { version = "2", features = [] }
tauri-plugin-deep-link        = "2"
tauri-plugin-dialog           = "2"
tauri-plugin-opener           = "2"
tauri-plugin-single-instance  = "2"
serde                 = { version = "1", features = ["derive"] }
serde_json            = "1"
reqwest               = { version = "0.12", features = ["json"] }
tokio                 = { version = "1", features = ["full"] }
sysinfo               = "0.33"
dirs                  = "5"
open                  = "5"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[profile.release]
opt-level = 3
lto       = true
strip     = true
